@@ -20,8 +20,14 @@
 		<item value="IDL:GNOME/Evolution/Component:@BASE_VERSION@"/>
 	</oaf_attribute>
 
+	<oaf_attribute name="evolution:component_alias" type="string"
+			   value="exchange"/>
 	<oaf_attribute name="name" type="string"
 		       _value="Evolution Exchange Component"/>
+	<oaf_attribute name="evolution:menu_label" type="string"
+		       _value="_Exchange"/>
+	<oaf_attribute name="evolution:menu_accelerator" type="string"
+		       _value="*Control*F5"/>
 	<oaf_attribute name="evolution:button_icon" type="string"
 		       value="@IMAGESDIR@/connector-mini.png"/>
 	<oaf_attribute name="evolution:button_label" type="string"
