@@ -1,3 +1,10 @@
+2004-07-07  Alfred Peng <alfred.peng@sun.com>
+
+	Fix for bugzilla BUG #59196.
+
+	* storage/GNOME_Evolution_Exchange_Storage.server.in.in:
+	Replace "Unknown" with "Exchange" in View->Window submenu.
+
 2004-07-05  Nicel KM  <mnicel@novell.com>
 
 	* configure.in : Bump version to 1.5.90
